<resources>
    <string name="app_name">Paris est un parking</string>
    <string name="gcum_spotted">Vous avez vu un véhicule trop mal garé ?</string>
    <string name="take_photo">Prenez une photo</string>
    <string name="use_photo">Utilisez la galerie</string>
    <string name="erase_photos">Effacez les images</string>
    <string name="report">Faire le rapport</string>
    <string name="set_location">Préciser le lieu</string>
    <string name="send">Envoyer les photos !</string>
    <string name="adjust_location">Modifier</string>
    <string name="gps_calling">Appel du GPS</string>
    <string name="gps_call_rejected">Appel au GPS refusée</string>
    <string name="location_provider_disabled">Le position par %s est désactivé</string>
    <string name="street_lookup">Recherche de la rue</string>
    <string name="gps_address_not_found">Adresse GPS non trouvé</string>
    <string name="not_in_paris">Adresse non parisienne : %s</string>
    <string name="creating_directories">Création des répertoires</string>
    <string name="sending_images">Envoi des images %1$d / %2$d</string>
    <string name="images_sent">Images envoyées</string>
    <string name="back_to_the_hunt">Retour à la chasse</string>
    <string name="address_format">%1$s, dans le %2$de"</string>
    <string name="success">Succès</string>
    <string name="required_confirmation">Confirmation requise</string>
    <string name="clear_all_photos_confirmation">Voulez-vous réellement retirer toutes les photos ?</string>
    <string name="error">Erreur</string>
    <string name="error_message">Erreur : %s</string>
    <string name="cannot_take_picture">Appareil photo non trouvé</string>
    <string name="cannot_create_tmp_file">Impossible de créer une image temporaire</string>
    <string name="cannot_save_photo">Erreur d\'écriture</string>
    <string name="cannot_display_photo">Impossible d\'afficher la photo</string>
    <plurals name="age">
        <item quantity="one">%d jour</item>
        <item quantity="other">%d jours</item>
    </plurals>
    <string name="username">Pseudo</string>
    <string name="password">Mot de passe</string>
    <string name="passwordCheck">Mot de passe (confirmation)</string>
    <string name="email">E-mail</string>
    <string name="email_help">L\'adresse email n\'est pas obligatoire mais si vous perdez votre mot de passe, vous perdrez votre pseudo.</string>
    <string name="login">Se connecter</string>
    <string name="register">S\'enregistrer</string>
    <string name="username_already_used">Le pseudo est déjà utilisé</string>
    <string name="send_password">Me renvoyer le mot de passe</string>
    <string name="forgot_email">Oubli du mot de passe</string>
    <string name="email_not_found">Cet email est inconnu</string>
    <string name="email_sent">Un mail contenant vos identifiants vous a été envoyé</string>
    <string name="logout">Déconnecter</string>
    <string name="should_be_login">Vous devez être connecté</string>
    <string name="invalid_username">Le pseudo doit être constitué de 1 à 20 caractères alphanumériques ou de _</string>
    <string name="invalid_password">Le mot de passe doit être constitué de 6 à 20 caractères</string>
    <string name="invalid_password_check">Le mot de passe de confirmation n\'est pas bon</string>
    <string name="invalid_email">Le format de l\'email est incorrect</string>
    <string name="testing">Test de %s</string>
    <string name="request_both_location_permissions">La localisation géographique peut proposer la rue où vous êtes automatiquement</string>
    <string name="request_fine_location_permissions">La localisation fine par satellites peut proposer la rue où vous êtes automatiquement</string>
    <string name="request_coarse_location_permissions">La localisation par bornes GSM et Wifi peut proposer la rue où vous êtes automatiquement</string>
    <string name="preferences">Préférences</string>
    <string name="images_size">Taille des images</string>
    <string name="images_size_small">Petites</string>
    <string name="images_size_medium">Moyennes</string>
    <string name="images_size_maximum">Maximales</string>
    <string name="images_quality">Qualité des images</string>
    <string name="images_quality_result">%d%%</string>
    <string name="map">Carte</string>
    <string name="list">Liste</string>
    <string name="by_date">Par date</string>
    <string name="close_to_me">Près de moi</string>
    <string name="filter">Filtre</string>
    <string name="to_filter">Filtrer</string>
    <string name="details">Détails</string>
    <string name="paris">Paris</string>
    <string name="today">Aujourd\'hui</string>
    <string name="distance_meters">%d mètres</string>
    <string name="distance_kilometers">%.1f kms</string>
    <string name="coordinates">%1$.5f°N / %2$.5f°E</string>
    <string name="more">Plus</string>
    <string name="more_nb_after">Plus (%d)</string>
    <string name="auther">Auteur</string>
    <string name="all">Tous</string>
    <string name="myself">Moi-même</string>
</resources>
