<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1"
    android:paddingBottom="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp"
    tools:context="gcum.gcumfisher.PreferencesActivity">

    <LinearLayout
        android:id="@+id/inputs"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/imagesSizeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/images_size"
            android:textSize="21sp"
            android:textStyle="bold" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/images_size_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onImageSizeButtonClicked"
                android:text="@string/images_size_small" />

            <RadioButton
                android:id="@+id/images_size_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onImageSizeButtonClicked"
                android:text="@string/images_size_medium" />

            <RadioButton
                android:id="@+id/images_size_maximum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onImageSizeButtonClicked"
                android:text="@string/images_size_maximum" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/images_quality_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/images_quality"
                android:textSize="21sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/images_quality_text"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="21sp"
                android:textStyle="bold" />

        </LinearLayout>

        <SeekBar
            android:id="@+id/images_quality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100" />

    </LinearLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputs"
        android:onClick="back"
        android:text="@string/back_to_the_hunt" />

</RelativeLayout>