<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1"
    android:paddingBottom="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp"
    tools:context="gcum.gcumfisher.WelcomeActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/gcum_spotted"
        android:textSize="17sp"
        android:textStyle="bold" />

    <GridLayout
        android:id="@+id/photoButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginTop="5dp"
        android:columnCount="4">

        <ImageButton
            android:id="@+id/takePhoto"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/take_photo"
            android:onClick="takePhoto"
            android:src="@android:drawable/ic_menu_camera" />

        <ImageButton
            android:id="@+id/usePhoto"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/use_photo"
            android:onClick="pickPhoto"
            android:src="@android:drawable/ic_menu_gallery" />

        <ImageButton
            android:id="@+id/clearPhotos"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/erase_photos"
            android:onClick="clearPhotos"
            android:src="@android:drawable/ic_menu_delete" />

        <TextView
            android:id="@+id/photosCount"
            android:textSize="17sp"
            android:textStyle="bold" />
    </GridLayout>

    <TextView
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginStart="25dp"
        android:textSize="15sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/networkButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/progress"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp">

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="login"
            android:text="@string/login" />

        <Button
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_toEndOf="@id/login"
            android:layout_toRightOf="@id/login"
            android:onClick="send"
            android:text="@string/send" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/networkButtons"
        android:layout_marginBottom="5dp"
        android:columnCount="3">

        <ImageButton
            android:id="@+id/adjustLocation"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/adjust_location"
            android:onClick="adjustLocation"
            android:paddingBottom="7dp"
            android:paddingTop="5dp"
            android:src="@android:drawable/ic_menu_edit" />

        <TextView
            android:id="@+id/street"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@id/adjustLocation"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@id/adjustLocation"
            android:layout_toStartOf="@id/adjustLocation"
            android:textSize="17sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <HorizontalScrollView
        android:id="@+id/imagesScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/location"
        android:layout_below="@id/photoButtons"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/darker_gray"
        android:fillViewport="false">

        <GridLayout
            android:id="@+id/images"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" />
    </HorizontalScrollView>

</RelativeLayout>
